<resources>
    <string name="app_name">CalgaryHacks</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_prof_main">ProfMain</string>
    <string name="title_activity_login">Sign in</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="register">Register Here</string>
    <string name="action_register">Register</string>
    <string name="prompt_firstname">First Name</string>
    <string name="prompt_lastname">Last Name</string>
    <string name="prompt_occupation">I am a...</string>
    <string name="title_activity_prof_course">ProfCourse</string>
    <string name="title_activity_prof_session">ProfSession</string>
    <string name="label_rating">Overall satisfaction of the current lecture</string>
    <string name="label_question">Questions from the class</string>

</resources>
