<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kourosh.calgaryhacks.RegisterActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/registerButton"
        android:layout_alignParentStart="true"
        android:layout_marginTop="75dp">

    </android.support.design.widget.TextInputLayout>

    <AutoCompleteTextView
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="83dp" />

    <EditText
        android:id="@+id/register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/action_sign_in_short"
        android:imeOptions="actionUnspecified"
        android:inputType="textPassword"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/register_email"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/register_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_firstname"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/prompt_firstname"
        android:imeOptions="actionUnspecified"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/register_password"
        android:layout_alignParentStart="true"
        android:inputType="text" />

    <EditText
        android:id="@+id/register_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_lastname"
        android:imeActionId="@+id/login"
        android:imeActionLabel="@string/prompt_firstname"
        android:imeOptions="actionUnspecified"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true"
        android:layout_below="@+id/register_firstname"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/prompt_occupation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_lastname"
        android:layout_alignParentStart="true"
        android:layout_marginTop="12dp"
        android:id="@+id/register_occupation"
        android:layout_alignParentEnd="true"
        android:textSize="16dp" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_occupation"
        android:layout_alignParentStart="true"
        android:layout_marginTop="13dp"
        android:id="@+id/register_spinner"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/registerButton"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:textStyle="bold"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/register_spinner"
        android:layout_alignParentStart="true" />
</RelativeLayout>
